fix dark mode on home page, prepare to purge legacy css(?) and push across old pages

--- a/css/components/nav.css
+++ b/css/components/nav.css
@@ -12,7 +12,7 @@
 	h2 {
 		font-family: var(--font-secondary);
 		text-decoration: none;
-		font-size: var(--font-size-lg);
+		font-size: var(--font-size-md);
 		color: var(--color-text-light);
 	}
 
@@ -50,6 +50,7 @@
 			color: var(--color-text-light);
 			border-radius: var(--radius-md);
 			transition: background-color 0.2s ease;
+			font-size: var(--font-size-sm);
 
 			&:hover:not([aria-current="page"]) {
 				background-color: color-mix(
